<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_in_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/color_white"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/username"
                    android:hint="@string/username_hint"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.Large"
                    android:drawableLeft="@mipmap/ic_person_16dp"
                    android:drawablePadding="@dimen/activity_horizontal_margin"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:id="@+id/password"
                    android:hint="@string/password_hint"
                    android:paddingBottom="@dimen/activity_horizontal_margin"
                    android:maxLines="1"
                    android:textAppearance="@style/TextAppearance.Large"
                    android:drawableLeft="@mipmap/ic_lock_16dp"
                    android:drawablePadding="@dimen/activity_horizontal_margin"/>

            </android.support.design.widget.TextInputLayout>

            <info.hoang8f.widget.FButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login"
                android:textStyle="bold"
                android:text="@string/sign_in"
                android:layout_margin="16dp"
                app:shadowEnabled="false"
                android:background="@drawable/ripple"
                app:cornerRadius="3dp"/>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>